Fixed issue with completed progress bar overlapping text

--- a/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_progress.scss
+++ b/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_progress.scss
@@ -43,10 +43,19 @@
 
 .ncs-progress--complete {
   .ncs-progress__count {
-    color: govuk-colour("white");
+    color: govuk-colour('white');
   }
 
   .ncs-progress__bar span {
-    background-color: govuk-colour("white");
+    background-color: govuk-colour('white');
+  }
+
+  .ncs-progress__bar {
+    width: calc(100% - 100px);
+  }
+
+  .ncs-progress__count  {
+    width: 100px;
+    text-align: left;
   }
 }
